Fix double scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,6 @@ html,
 body {
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 /* Scale */
